first basic mongoose implementation in tours

--- a/config.env
+++ b/config.env
@@ -1,2 +1,3 @@
 ENVIRONMENT=development
 PORT=8080
+DATABASE_CONNECTION_STRING=mongodb+srv://root:45teU4Pmlpqd3WN5@natours.drgekja.mongodb.net/?retryWrites=true&w=majority
