--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "inversify": "^6.0.1",
+    "mongoose": "^7.1.1",
     "morgan": "^1.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
