added bare user authentication

--- a/config.env
+++ b/config.env
@@ -1,3 +1,5 @@
 ENVIRONMENT=development
 PORT=8080
 DATABASE_CONNECTION_STRING=mongodb+srv://root:45teU4Pmlpqd3WN5@natours.drgekja.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET=just-a-stupid-password-that-i-dont-care-about
+JWT_EXPIRES_IN=90d
