--- a/package.json
+++ b/package.json
@@ -5,23 +5,32 @@
   "main": "app.js",
   "scripts": {
     "start": "npx nodemon",
-    "start:prod": "set ENVIRONMENT=production & npx nodemon"
+    "start:prod": "set ENVIRONMENT=production & npx nodemon",
+    "debug": "ndb server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.3",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "inversify": "^6.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.1.1",
     "morgan": "^1.10.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "slugify": "^1.6.6",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.4",
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.16.0",
+    "@types/validator": "^13.7.17",
+    "ndb": "^1.1.5",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
