added jwt token in cookie

--- a/config.env
+++ b/config.env
@@ -3,6 +3,7 @@ PORT=8080
 DATABASE_CONNECTION_STRING=mongodb+srv://root:45teU4Pmlpqd3WN5@natours.drgekja.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=just-a-stupid-password-that-i-dont-care-about
 JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
 EMAIL_USERNAME=1c693e38aee1c1
 EMAIL_PASSWORD=e018ad27a95e17
 EMAIL_HOST=sandbox.smtp.mailtrap.io
