--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "inversify": "^6.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.1.1",
