--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
     "inversify": "^6.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.1.1",
@@ -30,6 +33,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.4",
     "@types/express": "^4.17.17",
+    "@types/hpp": "^0.2.6",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.16.0",
     "@types/validator": "^13.7.17",
