--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npx nodemon",
     "start:prod": "set ENVIRONMENT=production & npx nodemon",
-    "debug": "ndb server.js"
+    "debug": "npx nodemon --config nodemon.debug.json"
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +25,7 @@
     "mongoose": "^7.1.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.7",
+    "pug": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "slugify": "^1.6.6",
