--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.5.0",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
@@ -27,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.1.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "pug": "^3.0.2",
     "reflect-metadata": "^0.1.13",
@@ -37,6 +39,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.4",
     "@types/express": "^4.17.17",
+    "@types/express-fileupload": "^1.5.0",
     "@types/hpp": "^0.2.6",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.16.0",
