--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.1.1",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "pug": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
+    "sharp": "^0.33.4",
     "slugify": "^1.6.6",
     "validator": "^13.9.0"
   },
